Правка заголовка календаря в виде месяца

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ wp-content/blogs.dir/
 wp-content/upgrade/
 wp-content/wp-cache-config.php
 wp-content/plugins/hello.php
+/terminal42.sublime-project
